--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "font-awesome": "^4.7.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "7.2.5",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "2.13.9",
     "sass": "^1.51.0",
     "shortid": "^2.2.16",
     "web-vitals": "^2.1.4"
