--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "redux-devtools-extension": "2.13.9",
     "sass": "^1.51.0",
     "shortid": "^2.2.16",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "clsx": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
